Simplifying the final example

--- a/lessons/swc-python/python-09-cmdline.ipynb
+++ b/lessons/swc-python/python-09-cmdline.ipynb
@@ -2142,52 +2142,80 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's use this and NumPy to clean up our `count` function.\n",
-      "After a bit of tweaking, we get:"
+      "Let's use list comprehension to clean up our code.\n",
+      "First,\n",
+      "though,\n",
+      "let's clean up our data.\n",
+      "It's simple to represent our fractals using tightly-packed 1's and 0's,\n",
+      "but nobody else's software will recognize that data format.\n",
+      "If we use something standard,\n",
+      "like comma-separated values (CSV),\n",
+      "we can get rid of our own parsing code.\n",
+      "This makes our data files somewhat larger:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def count(source):\n",
-      "    if type(source) is str:\n",
-      "        reader = open(source, 'r')\n",
-      "    else:\n",
-      "        reader = source\n",
-      "    cells = np.array([list(x.strip()) for x in reader.readlines()], np.int32)\n",
-      "    if reader is not source:\n",
-      "        reader.close()\n",
-      "    return cells.shape[1], cells.sum(1)"
+      "!cat csv_1.txt"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0,0,0,1,0,0,0,0,0\r\n",
+        "0,0,1,1,0,0,1,1,0\r\n",
+        "0,0,0,1,1,1,1,0,0\r\n",
+        "0,0,1,1,1,0,0,0,0\r\n",
+        "0,0,1,1,0,0,0,0,0\r\n",
+        "0,0,1,1,1,0,0,0,0\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's go through this line by line:\n",
-      "\n",
-      "*   The function takes a single argument `source`, which can be either an open file (e.g., `sys.stdin`) or a string containing a filename.\n",
-      "*   If `source` is a string, we open that file and assign the resulting file handle to `reader`.\n",
-      "*   Otherwise, we just assign the open file handle to `reader`, so that no matter how the function was called, we can read from `reader`.\n",
-      "*   Line 6 then converts the file into a NumPy array:\n",
-      "    *   `reader.readlines()` reads all of the lines of the file into a list of strings.\n",
-      "    *   The list comprehension `[x.strip() for x in reader.readlines()]` would strip off the end-of-line characters from those strings...\n",
-      "    *   ...but we use `list(x.strip())` instead of just `x.strip()` to turn the characters in each row (like `'10010'`) into a list (like `['1', '0', '0', '1', '0']`)...\n",
-      "    *   ...so that we wind up with a list of lists, where each sublist is a row of our data.\n",
-      "    *   We then use `np.array` to turn this list of lists into a NumPy array.\n",
-      "*   If the call to `count` passed in a string, and we opened the file ourselves, we need to close `reader`.\n",
-      "*   Finally, we return what we originally returned: the width of the data, and the sums of filled cells across each row."
+      "but we can now read our data with a single statement:"
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np\n",
+      "print np.loadtxt('csv_1.txt', delimiter=',')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[ 0.  0.  0.  1.  0.  0.  0.  0.  0.]\n",
+        " [ 0.  0.  1.  1.  0.  0.  1.  1.  0.]\n",
+        " [ 0.  0.  0.  1.  1.  1.  1.  0.  0.]\n",
+        " [ 0.  0.  1.  1.  1.  0.  0.  0.  0.]\n",
+        " [ 0.  0.  1.  1.  0.  0.  0.  0.  0.]\n",
+        " [ 0.  0.  1.  1.  1.  0.  0.  0.  0.]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can use these tricks in `process` as well:"
+      "Using this,\n",
+      "we can rewrite `process` as follows:"
      ]
     },
     {
@@ -2196,37 +2224,105 @@
      "input": [
       "def process(title, filenames):\n",
       "    if filenames is None:\n",
-      "        width, filled = count(sys.stdin)\n",
-      "        display(title, filled, width)\n",
+      "        data = np.loadtxt(sys.stdin, delimiter=',')\n",
+      "        display(title, data, 1)\n",
       "    else:\n",
-      "        results = [count(f) for f in filenames]\n",
-      "        width, filled = results[0]\n",
-      "        assert all([r[0] == width for r in results]), 'File widths unequal'\n",
-      "        for a in results[1:]:\n",
-      "            filled += a[1]\n",
-      "        display(title, filled, len(filenames) * width)"
+      "        results = [np.loadtxt(f, delimiter=',') for f in filenames]\n",
+      "        assert all([x.shape == results[0].shape for x in results]), 'File sizes differ'\n",
+      "        for r in results[1:]:\n",
+      "            results[0] += r\n",
+      "        display(title, results[0], len(results))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "*   If no filenames are given, we use `count` to count filled cells from standard input and display the result as before.\n",
-      "*   Otherwise, we use a list comprehension to call `count` for all the filenames in a single statement.  Since `count` returns two values, this list comprehension will create a list of pairs.  The first element of each pair will be the width of that data file, and the second will be its counts.\n",
-      "*   We then check that all the widths are the same by comparing the first element of each pair to the width of the first data set, and use Python's built-in `all` function to check that all of the values in the resulting list of Booleans are true.\n",
-      "*   Lines 9-10 add the vectors of counts for files 1 to N to the counts for file 0.  (Doing this without a loop is left as an exercise for the reader.)"
+      "Let's go through this line by line:\n",
+      "\n",
+      "*   If no filenames have been given, `process` reads data from standard input using `np.loadtxt`, then pass that two-dimensional array to `display`, along with a '1' to indicate that we've only got one data set.\n",
+      "*   Otherwise, if we *do* have filenames, we use a list comprehension to load data from all of the files with a single statement.\n",
+      "*   Then, on line 7, we check that the shapes of all of the arrays match the shape of the first array.\n",
+      "*   Assuming they are, we add the first and following arrays to array 0 to get the total number of times each cell in the grid has ever been filled.\n",
+      "*   Finally, we call `display` with the merged data, passing in the totals and the number of arrays we read."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Is the final version of the program better than the one before it?\n",
-      "It isn't much shorter&mdash;we've only cut 8 lines out of 59:"
+      "The `display` function now needs to be rewritten to do two things:\n",
+      "scale the counts per row,\n",
+      "and show them.\n",
+      "This isn't a great design,\n",
+      "as it violates our \"one purpose per function\" rule,\n",
+      "but it's good enough for now:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def display(title, data, number):\n",
+      "    print title\n",
+      "    scaling = float(number * data.shape[1])\n",
+      "    densities = data.sum(1) / scaling\n",
+      "    for d in densities:\n",
+      "        print d"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The program we have now produced runs exactly the same way as the previous versions:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%run fracdens_8.py csv_1.txt csv_2.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "csv_1.txt\n",
+        "0.111111111111\n",
+        "0.444444444444\n",
+        "0.444444444444\n",
+        "0.333333333333\n",
+        "0.222222222222\n",
+        "0.333333333333\n",
+        "csv_2.txt\n",
+        "0.111111111111\n",
+        "0.444444444444\n",
+        "0.444444444444\n",
+        "0.444444444444\n",
+        "0.222222222222\n",
+        "0.444444444444\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "but it's two-thirds the size:"
      ]
     },
     {
@@ -2243,24 +2339,24 @@
        "stream": "stdout",
        "text": [
         "      59     185    1690 fracdens_7.py\r\n",
-        "      51     161    1463 fracdens_8.py\r\n",
-        "     110     346    3153 total\r\n"
+        "      42     133    1238 fracdens_8.py\r\n",
+        "     101     318    2928 total\r\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The new program isn't noticeably faster than the old one either,\n",
+      "The new program isn't noticeably faster than the old one,\n",
+      "though,\n",
       "since the time to do the calculations is dwarfed by\n",
       "the time needed to read the data into the program.\n",
       "\n",
-      "In practice,\n",
-      "the answer to the question, \"Is it better?\"\n",
-      "is another question: \"For whom?\"\n",
+      "Is the NumPy version better than the list-based version?\n",
+      "The answer depends on the audience we have in mind.\n",
       "Programmers who know Python well,\n",
       "and who are used to thinking in terms of applying operations to entire data sets at once,\n",
       "would probably have written something like the final version right from the start.\n",
