Added objectives to swc-python files-list ipython notebook

--- a/lessons/swc-python/python-04-files-lists.ipynb
+++ b/lessons/swc-python/python-04-files-lists.ipynb
@@ -27,7 +27,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- FIXME"
+      "- Learn how to open a file and read in data.\n",
+      "- Understand how to interpret and remove newlines in python.\n",
+      "- Use `ipythonblocks` library to create grids of colored cells based on characters in a file.\n",
+      "- Introduce the list data structure and learn how to manipulate lists in python.\n",
+      "- Use lists to store lines from a data file in order to generate multi-dimensional color grids.\n"
      ]
     },
     {
