Add key points to swc-python file-lists ipython notebook

--- a/lessons/swc-python/python-04-files-lists.ipynb
+++ b/lessons/swc-python/python-04-files-lists.ipynb
@@ -1910,7 +1910,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- FIXME"
+      "- Open a file for reading using `file_handle` = `open(filename, 'r')` and close the file using `file_handle.close()`.\n",
+      "- Opening a file using `open(...)` returns a file handle object that makes a connection between a program and the file.\n",
+      "- All lines read in from a file contain a newline character (`\\n`) at the end of the line.\n",
+      "- Remove newline characters (and all leading or trailing whitepace) in python using `line.strip()`.\n",
+      "- Lists are elements are written in square brackets and separated by commas.\n",
+      "- Lists are mutable objects - they can be changed after they are created.\n",
+      "- List data structure in python has built in functions including: `count()`, `sort()`, and `reverse()`.\n"
      ]
     }
    ],
