Changed position of jocular string comparison

--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -339,6 +339,23 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Comparisons between strings return results in *lexiographical order*, in which the leftmost characters are compared first. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "'Bears' > 'Packers'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "As a special case, the Boolean values match 0 and 1, but no other integers:"
      ]
     },
@@ -357,16 +374,6 @@
      "collapsed": false,
      "input": [
       "True == 1 "
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": true,
-     "input": [
-      "'Bears' > 'Packers'"
      ],
      "language": "python",
      "metadata": {},
