Corrected variable mispelling and missing file name

--- a/lessons/thw-python/data-structures/exercises.ipynb
+++ b/lessons/thw-python/data-structures/exercises.ipynb
@@ -45,7 +45,7 @@
      "source": [
       "# Exercise 2\n",
       "\n",
-      "Make a list with 5 things in it, say, \"Cleese\", \"Chapman\", \"Idle\", \"Palin\", and \"Gilliam\""
+      "Make a list with 6 things in it, say, \"Cleese\", \"Chapman\", \"Idle\", \"Palin\", \"Jones\", and \"Gilliam\""
      ]
     },
     {
@@ -121,7 +121,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print digistlist[8] + digistlist[5]"
+      "print digitslist[8] + digitslist[5]"
      ],
      "language": "python",
      "metadata": {},
@@ -193,7 +193,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "fh_animals = open(\"../sw_engineering/big_animals.txt\")\n",
+      "fh_animals = open(\"data.dat\")\n",
       "for line in fh_animals:\n",
       "    print line,\n"
      ],
