Added blank cell, explained for..else, changed battlestar to python

--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -519,6 +519,14 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -571,7 +579,7 @@
      "source": [
       "What is the difference between the output of these two?\n",
       "\n",
-      "Importantly, Python allows you to use an else statement in a for loop.\n",
+      "Importantly, Python allows you to use an else statement in a for loop.  The statements in the block following `else` will execute only after all the items in the loop have been exhausted without a `break` statement.\n",
       "\n",
       "That is :"
      ]
@@ -634,8 +642,8 @@
      "collapsed": true,
      "input": [
       "new_file = open(\"example2.txt\", \"w\")\n",
-      "dwight = ['bears', 'beets', 'Battlestar Galactica']\n",
-      "for i in dwight:\n",
+      "lines = ['Does this lion eat ants?', 'have you confused your cat recently?', \"It's just a flesh wound!\"]\n",
+      "for i in lines:\n",
       "    new_file.write(i + '\\n')\n",
       "new_file.close()"
      ],
