changes in text to separate a bit the idea of function composition from following the stack in a more complex example

--- a/lessons/swc-python/python-01-functions.ipynb
+++ b/lessons/swc-python/python-01-functions.ipynb
@@ -244,7 +244,7 @@
      "source": [
       "The box containing those three variables is called a [stack frame](glossary.html#stack_frame).\n",
       "When `average3` is called on line 7,\n",
-      "Python creates a new stack frame on top of the first one,\n",
+      "Python creates a new stack frame **on top** of the first one,\n",
       "then creates the variables `left`, `middle`, and `right` in it:"
      ]
     },
@@ -266,6 +266,17 @@
       "and starts using the one beneath it again.\n",
       "The temporary variables `left`, `middle`, and `right` vanish,\n",
       "which is why trying to print one of their values fails:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The program displays the string `'middle after call:'`,\n",
+      "but when Python tries to get the value of `middle`,\n",
+      "it discovers that it doesn't exist any longer\n",
+      "and reports an error.\n",
+      "(The error appears first because the Python interpreter gives higher priority to error messages than \"normal\" output.)"
      ]
     },
     {
@@ -301,20 +312,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The program displays the string `'middle after call:'`,\n",
-      "but when Python tries to get the value of `middle`,\n",
-      "it discovers that it doesn't exist any longer\n",
-      "and reports an error.\n",
-      "(The error appears first because the Python interpreter gives higher priority to error messages than \"normal\" output.)"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Why does Python go to all the trouble of creating and discarding stack frames?\n",
-      "To understand the answer,\n",
-      "let's first define another conversion function:"
+      "Let us create a new function `kelvin_to_celsius` to convert temperatures from, well,  Kelvin to Celsius."
      ]
     },
     {
@@ -343,12 +341,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As its name suggests,\n",
-      "`kelvin_to_celsius` converts temperatures from Kelvin to Celsius.\n",
+      "\n",
       "Now that we have it,\n",
       "we don't have to do any calculations to convert Fahrenheit to Celsius.\n",
       "Instead,\n",
-      "we can combine the two functions we already have:"
+      "we can combine the two functions we already have. This idea of **composing function calls** is very powerful and is at the core of what makes functions so useful."
      ]
     },
     {
@@ -380,7 +377,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's trace what happens when we calculate human body temperature in &deg;C.\n",
+      "Why does Python go to all the trouble of creating and discarding stack frames?\n",
+      "To understand the answer let's trace what happens when we calculate human body temperature in &deg;C.\n",
       "Just before Python executes line 7 of our program,\n",
       "the stack consists of a single frame\n",
       "that contains the variable `body_temp_f`:"
