Solve typos in functions and loop notebooks.

--- a/lessons/swc-python/python-02-loops-indexing.ipynb
+++ b/lessons/swc-python/python-02-loops-indexing.ipynb
@@ -1365,7 +1365,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If we inver the loops&mdash;i.e.,\n",
+      "If we invert the loops&mdash;i.e.,\n",
       "if we loop over all values of `y`\n",
       "but make the range of `x` depend on the value of `y`&mdash;then\n",
       "we get the following pattern instead:"
