--- a/lessons/swc-python/python-01-functions.ipynb
+++ b/lessons/swc-python/python-01-functions.ipynb
@@ -412,7 +412,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The first thing `fahr_to_celsius` does is called `fahr_to_kelvin`.\n",
+      "The first thing `fahr_to_celsius` does is call `fahr_to_kelvin`.\n",
       "Python creates yet another stack frame to keep track of this call,\n",
       "and this frame also contains a variable called `temp`:"
      ]
@@ -505,7 +505,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "You can see an interactive visualization of the frames in our temperature conversion program <a href=http://www.pythontutor.com/visualize.html#code=def+kelvin_to_celsius(temp)%3A%0A++++return+temp+-+273.15%0A%0Adef+fahr_to_kelvin(temp)%3A%0A++++return+((temp+-+32.0)+*+5.0/9.0)+%2B+273.15%0A%0Adef+fahr_to_celsius(temp)%3A%0A++++degrees_k+%3D+fahr_to_kelvin(temp)%0A++++degrees_c+%3D+kelvin_to_celsius(degrees_k)%0A++++return+degrees_c%0A%0Abody_temp_f+%3D+98.6%0Aprint+'body+temperature+in+Celsius%3A',+fahr_to_celsius(body_temp_f)&mode=display&cumulative=true&heapPrimitives=false&drawParentPointers=false&textReferences=false&showOnlyOutputs=false&py=2&curInstr=0>here</a>. Here we can get an idea of how frames are created and discarded as you go through the program."
+      "You can see an interactive visualization of the frames in our temperature conversion program <a href=http://www.pythontutor.com/visualize.html#code=def+kelvin_to_celsius(temp)%3A%0A++++return+temp+-+273.15%0A%0Adef+fahr_to_kelvin(temp)%3A%0A++++return+((temp+-+32.0)+*+5.0/9.0)+%2B+273.15%0A%0Adef+fahr_to_celsius(temp)%3A%0A++++degrees_k+%3D+fahr_to_kelvin(temp)%0A++++degrees_c+%3D+kelvin_to_celsius(degrees_k)%0A++++return+degrees_c%0A%0Abody_temp_f+%3D+98.6%0Aprint+'body+temperature+in+Celsius%3A',+fahr_to_celsius(body_temp_f)&mode=display&cumulative=true&heapPrimitives=false&drawParentPointers=false&textReferences=false&showOnlyOutputs=false&py=2&curInstr=0>at the Online Python Tutor</a>. Here we can get an idea of how frames are created and discarded as you go through the program."
      ]
     },
     {
