Minor text and link fixes

--- a/lessons/thw-python/strings-io/tutorial.ipynb
+++ b/lessons/thw-python/strings-io/tutorial.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": ""
+  "name": "tutorial"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,7 +21,7 @@
       "2.  Use open() to open, read, and write to files.\n",
       "\n",
       "\n",
-      "To start understanding the string type, let's use the built in helpsystem."
+      "To start understanding the string type, let's use the built in help system."
      ]
     },
     {
@@ -40,7 +40,7 @@
      "source": [
       "The help page for string is very long, and it may be easier to keep it open\n",
       "in a browser window by going to the [online Python\n",
-      "documentation](http://docs.python.org/library/stdtypes.html#sequence-types-str-unicode-list-tuple-bytearray-buffer-xrange)\n",
+      "documentation for str](http://docs.python.org/2/library/functions.html#str) and the documentation for [sequence types](http://docs.python.org/library/stdtypes.html#sequence-types-str-unicode-list-tuple-bytearray-buffer-xrange)\n",
       "while we talk about its properties.\n",
       "\n",
       "At its heart, a string is just a sequence of characters. Basic strings are\n",
@@ -313,7 +313,7 @@
      "source": [
       "The main two parameters we'll need to worry about are the name of the\n",
       "file and the mode, which determines whether we can read from or write to\n",
-      "the file. open returns a file object, acts like a pointer into the file.\n",
+      "the file. open returns a file object which acts like a pointer into the file.\n",
       "An example will make this clear. In the code below, I've opened a file\n",
       "that contains one line:\n",
       "\n",
@@ -328,7 +328,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "f = open('testfile.txt','r')"
+      "f = open('testfile.txt', 'r')"
      ],
      "language": "python",
      "metadata": {},
@@ -418,7 +418,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "f = open('testfile.txt','r')\n",
+      "f = open('testfile.txt', 'r')\n",
       "lines = f.readlines()\n",
       "print lines\n",
       "f.close()  # Always close the file when you are done with it"
@@ -443,7 +443,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "f = open('testfile.txt','r')\n",
+      "f = open('testfile.txt', 'r')\n",
       "lines = [line.strip() for line in f]\n",
       "f.close()\n",
       "print lines"
@@ -457,7 +457,7 @@
      "collapsed": false,
      "input": [
       "lines = []\n",
-      "f = open('testfile.txt','r')\n",
+      "f = open('testfile.txt', 'r')\n",
       "for line in f:\n",
       "    lines.append(s.strip())\n",
       "f.close()\n",
@@ -501,7 +501,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "outfile = open('outfile.txt','w')\n",
+      "outfile = open('outfile.txt', 'w')\n",
       "outfile.write('This is the first line!')\n",
       "outfile.close()"
      ],
@@ -525,7 +525,7 @@
      "source": [
       "### Aside About File Editing\n",
       "\n",
-      "How is it possible that you can to edit a file in place. You can use f.seek()\n",
+      "How do you edit a file in place?  You can use f.seek()\n",
       "and f.tell() to verify that even if your file handle is pointing to the\n",
       "middle of a file, write commands go to the end of the file in append\n",
       "mode. The best way to change a file is to open a temporary file in\n",
