Fixed reference to no-longer-present example file

--- a/lessons/thw-python/data-structures/exercises.ipynb
+++ b/lessons/thw-python/data-structures/exercises.ipynb
@@ -96,7 +96,7 @@
      "source": [
       "# Exercise 3\n",
       "\n",
-      "Create a list containing the strings \"zero\", \"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", and \"nine\".\n",
+      "Create a list called `digitslist` containing the strings \"zero\", \"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", and \"nine\".\n",
       "\n"
      ]
     },
@@ -133,8 +133,7 @@
      "source": [
       "# Exercise 4\n",
       "\n",
-      "1. Make a dictionary whose keys are the strings \"zero\" through \"nine\" and whose values are ints 0 through 9.\n",
-      "\n"
+      "Make a dictionary called `digitsdict` whose keys are the strings \"zero\" through \"nine\" and whose values are ints 0 through 9."
      ]
     },
     {
@@ -186,16 +185,16 @@
      "metadata": {},
      "source": [
       "# Exercise 5\n",
-      "Modify the following snippet which prints each line in the file big_animals.txt to print the length of each line instead.  \n"
+      "The following snippet prints prints each line in the file `data.dat`.  Modify it to print the length of each line instead.  "
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "fh_animals = open(\"data.dat\")\n",
-      "for line in fh_animals:\n",
-      "    print line,\n"
+      "fh = open(\"data.dat\")   # open file \n",
+      "for line in fh:         # loop through fh one line at a time\n",
+      "    print line.strip()"
      ],
      "language": "python",
      "metadata": {},
