fixed unicode debris spotted by @wltrimbl

--- a/lessons/thw-python/obj-orientation/exercises/oop.ipynb
+++ b/lessons/thw-python/obj-orientation/exercises/oop.ipynb
@@ -144,7 +144,7 @@
      "source": [
       "## Exercise 5\n",
       "\n",
-      "Next, add a `__str__(self)` method. This method must return a string. \u00c2 The\n",
+      "Next, add a `__str__(self)` method. This method must return a string. The\n",
       "string should contain the Japanese representation of all the ingredients, but\n",
       "the string itself should be in proper English so, for example, \"buri\", \"buri and\n",
       "tsubugai\", and \"buri, tsubugai, and kanpachi\" are the correct way to print one,\n",
