Edited the list of objectives

--- a/lessons/swc-python/python-08-numpy.ipynb
+++ b/lessons/swc-python/python-08-numpy.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": ""
+  "name": "python-08-numpy"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -27,7 +27,22 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "FIXME"
+      "Using the NumPy libraries to learn efficient\n",
+      "\n",
+      "* Vector and Matrix manipulation\n",
+      "* Matrix notation\n",
+      "\n",
+      "Getting hands-on experience with\n",
+      "\n",
+      "* determining and setting datatypes for matrix elements (float, integer, 32 and 64 bit)\n",
+      "* matrix primitives and stereotypes\n",
+      "* indexing and changing individual matrix values\n",
+      "* the difference between row-major order vs. column-major order\n",
+      "* copying vs. aliasing matrix data\n",
+      "* using `timeit` to compare performance for different forumlations of the same calculation\n",
+      "* slicing and masking matrices of data to get scalar statistics via compact queries\n",
+      "* visualising more complex data to gain insight with `matplotlib`\n",
+      "* common mistakes assoiated with floating point numbers and the tools/strategies to overcome them\n"
      ]
     },
     {
