Simplified knights example ipynb PR #84

--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -579,31 +579,44 @@
      "source": [
       "What is the difference between the output of these two?\n",
       "\n",
-      "Importantly, Python allows you to use an else statement in a for loop.  The statements in the block following `else` will execute only after all the items in the loop have been exhausted without a `break` statement.\n",
-      "\n",
-      "That is :"
+      "We can combine loops and flow control to take actions that are more complex, and that depend on the data.  First, let us define a dictionary with some names and titles, and a list with a subset of the names we will treat differently."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "knights={\"Sir Belvedere\":\"the Wise\", \n",
+      "         \"Sir Lancelot\":\"the Brave\", \n",
+      "         \"Sir Galahad\":\"the Pure\", \n",
+      "         \"Sir Robin\":\"the Brave\", \n",
+      "         \"The Black Knight\":\"John Cleese\"} # create a dict with names and titles\n",
+      "favorites=knights.keys()      # create a list of favorites with all the knights\n",
+      "favorites.remove(\"Sir Robin\") # change favorites to include all but one.\n",
+      "print knights\n",
+      "print favorites"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We can loop through the dict of names and titles and do one of two different things for each by putting an if statement inside the for loop:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "knights={\"Sir Belvedere\":\"the Wise\", \n",
-      "         \"Sir Lancelot\":\"the Brave\", \n",
-      "         \"Sir Galahad\":\"the Pure\", \n",
-      "         \"Sir Robin\":\"the Brave\", \n",
-      "         \"The Black Knight\":\"John Cleese\"} \n",
-      "\n",
-      "favorites=knights.keys()\n",
-      "favorites.remove(\"Sir Robin\")\n",
-      "for name, title in knights.iteritems() : \n",
+      "for name, title in knights.items() : \n",
       "    string = name + \", \"\n",
-      "    for fav in favorites :\n",
-      "        if fav == name :\n",
-      "            string += title\n",
-      "            break\n",
+      "    if name in favorites:   # this returns True if any of the values in favorites match.\n",
+      "        string = string + title\n",
       "    else:\n",
-      "        string += title + \", but not quite so brave as Sir Lancelot.\" \n",
+      "        string = string + title + \", but not quite so brave as Sir Lancelot.\" \n",
       "    print string"
      ],
      "language": "python",
