--- a/lessons/thw-python/functions-and-modules/python_functions_and_modules.ipynb
+++ b/lessons/thw-python/functions-and-modules/python_functions_and_modules.ipynb
@@ -160,7 +160,7 @@
       "However, this often isn't very useful since we haven't returned any values from this function.  Note: that if you don't return anything from a function in Python, you implcitly have returned the special `None` singleton.  To return vaulues that you computed locally in the function body, use the **return** keyword.\n",
       "\n",
       "    def <function name>():\n",
-      "        <functiom body>\n",
+      "        <function body>\n",
       "        return <local variable 1>      "
      ]
     },
@@ -230,7 +230,7 @@
       "Functions may be defined such that they have multiple arguments or multiple return values:\n",
       "\n",
       "    def <function name>(<arg1>, <arg2>, ...):\n",
-      "        <functiom body>\n",
+      "        <function body>\n",
       "        return <var1> , <var2>, ..."
      ]
     },
