mispelled variable name

--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -611,7 +611,7 @@
      "collapsed": false,
      "input": [
       "print type(versionnumber) == float\n",
-      "print type(numberpfpythons) == int\n",
+      "print type(numberofpythons) == int\n",
       "print type(thenumberten) == str"
      ],
      "language": "python",
